feat: login screen and fixed error in cookies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,9 @@
                 // Desactiva reglas de formato que manejará Prettier
                 "indent": "off",
                 "quotes": "off",
-                "semi": "off"
+                "semi": "off",
+                // Desactiva la regla que prohíbe el uso de 'any'
+                "@typescript-eslint/no-explicit-any": "off"
             }
         },
         {
